opam-version: "1.2"
name: "gobject"
version: "~unknown"
maintainer: "Manas Jayanth<prometheansacrifice@gmail.com>"
authors: "Manas Jayanth <prometheansacrifice@gmail.com>"
homepage: "https://github.com/prometheansacrifice/ocaml-gobject"
bug-reports: "https://github.com/prometheansacrifice/ocaml-gobject/issues"
license: "GPL3"
dev-repo: "https://github.com/prometheansacrifice/ocaml-gobject.git"
build: [["dune" "build" "-p" name "-j" jobs]]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "dune" {build}
  "ctypes"
  "ctypes-foreign"
  "ounit"
  "base"
  "stdio"
  "configurator"
  "gi-glib2"
]

