(rule
 (targets Core_raw.mli Core_raw.ml
          ;; Value.mli Value.ml
          ;; Closure.mli Closure.ml
          Binding_flags.mli Binding_flags.ml
          Param_spec.mli Param_spec.ml
          Type_interface.mli Type_interface.ml
          Object.mli Object.ml)
 (deps    ../gen/gen.exe)
 (action  (run %{deps} -o %{targets})))

(rule
 (targets c_flags.sexp
            c_library_flags.sexp)
  (deps    ../configurator/discover.exe)
  (action  (run %{deps})))

(library
 (name        GObject)
  (public_name gobject)
  (libraries ctypes ctypes.foreign)
  (c_names         dyn_load_constants_stubs)
  (c_flags         (:include c_flags.sexp))
  (c_library_flags (:include c_library_flags.sexp))
 )
